# pGarfield-toolkit

./: .gitignore  README.md  makefile
Include/: .ComponentFieldMap.hh.swp  RandomEngineMPIServer.hh  tet_mesh.hh
Source/: ComponentFieldMap.cc  RandomEngineRoot.cc  TetrahedralTree.cc
pGarfield/: makefile
pGarfield-client/example1/: ELIST.lis  MPLIST.lis  NLIST.lis  PRNSOL.lis  card.ini  env.sh  gem.C  makefile  read_card.h  slurm.job
pGarfield/Heed/: CMakeLists.txt  HeedFieldMap.cpp  makefile
pGarfield/Heed/heed++/code/: EnTransfCS.cpp  EnTransfCS.h  HeedCluster.cpp  HeedCluster.h  HeedDeltaElectron.cpp  HeedDeltaElectron.h  HeedMatterDef.cpp  HeedMatterDef.h  HeedParticle.cpp  HeedParticle.h  HeedParticle_BGM.cpp  HeedParticle_BGM.h  HeedPhoton.cpp  HeedPhoton.h  PhotoAbsCS.cpp  PhotoAbsCS.h  PhotoAbsCSLib.cpp  PhotoAbsCSLib.h
pGarfield/Heed/wcpplib/clhep_units/: WPhysicalConstants.h  WSystemOfUnits.h
pGarfield/Heed/wcpplib/geometry/: box.cpp  circumf.cpp  circumf.h  gparticle.cpp  gparticle.h  plane.cpp  plane.h  polyline.cpp  polyline.h  straight.cpp  straight.h  surface.cpp  surface.h  trajestep.cpp  trajestep.h  vec.cpp  vec.h  volume.cpp
pGarfield/Heed/wcpplib/math/: DoubleAc.h  cubic.cpp  linexi2.cpp  linexi2.h  parabola.cpp  parabola.h  tline.h
pGarfield/Heed/wcpplib/matter/: AtomDef.cpp  AtomDef.h  GasDef.cpp  GasDef.h  MatterDef.cpp  MatterDef.h  MoleculeDef.cpp  MoleculeDef.h
pGarfield/Heed/wcpplib/particle/: eparticle.cpp  eparticle.h  particle_def.cpp  particle_def.h
pGarfield/Heed/wcpplib/random/: chisran.cpp  chisran.h  pois.cpp  pois.h  ranluxint.h  rnorm.h
pGarfield/Heed/wcpplib/safetl/: AbsArr.h
pGarfield/Heed/wcpplib/stream/: prstream.h
pGarfield/Include/: ComponentFieldMap.hh  Random.hh  RandomEngineMPIServer.hh  tet_mesh.hh
pGarfield/Include/Garfield/: AvalancheGrid.hh  AvalancheMC.hh  AvalancheMicroscopic.hh  Component.hh  ComponentAnalyticField.hh  ComponentAnsys121.hh  ComponentAnsys123.hh  ComponentCST.hh  ComponentComsol.hh  ComponentConstant.hh  ComponentElmer.hh  ComponentElmer2d.hh  ComponentFieldMap.hh  ComponentGrid.hh  ComponentNeBem2d.hh  ComponentNeBem3d.hh  ComponentNeBem3dMap.hh  ComponentParallelPlate.hh  ComponentTcad2d.hh  ComponentTcad3d.hh  ComponentTcadBase.hh  ComponentUser.hh  ComponentVoxel.hh  DriftLineRKF.hh  FundamentalConstants.hh  GarfieldConstants.hh  Geometry.hh  GeometryRoot.hh  GeometrySimple.hh  KDTree.hh  LinkDef.h  MagboltzInterface.hh  Medium.hh  MediumCdTe.hh  MediumConductor.hh  MediumDiamond.hh  MediumGaAs.hh  MediumGaN.hh  MediumGas.hh  MediumMagboltz.hh  (+40 more)
pGarfield/Magboltz/: CMakeLists.txt  magboltz.f
pGarfield/NeBem/: ComputeProperties.c  Copyright.md  Isles.c  Isles.h  NR.h  ReTriM.c  Vector.c  Vector.h  luc.c  neBEM.c  neBEM.h  neBEMInterface.c  neBEMInterface.h  nrutil.c  svdcmp.c
pGarfield/Source/: AvalancheGrid.cc  AvalancheMC.cc  AvalancheMicroscopic.cc  Component.cc  ComponentAnalyticField.cc  ComponentAnsys121.cc  ComponentAnsys123.cc  ComponentCST.cc  ComponentComsol.cc  ComponentConstant.cc  ComponentElmer.cc  ComponentElmer2d.cc  ComponentFieldMap.cc  ComponentGrid.cc  ComponentNeBem2d.cc  ComponentNeBem3d.cc  ComponentNeBem3dMap.cc  ComponentParallelPlate.cc  ComponentTcad2d.cc  ComponentTcad3d.cc  ComponentTcadBase.cc  ComponentUser.cc  ComponentVoxel.cc  DriftLineRKF.cc  GeometryRoot.cc  GeometrySimple.cc  KDTree.cc  Medium.cc  MediumCdTe.cc  MediumDiamond.cc  MediumGaAs.cc  MediumGaN.cc  MediumGas.cc  MediumMagboltz.cc  MediumSilicon.cc  NeBemInterface.cpp  Numerics.cc  OpticalData.cc  PlottingEngine.cc  Polygon.cc  (+35 more)
pGarfield_client/OUTPUT/: faisal.job
pGarfield_client/SRC/: card.ini  gem.C  gem2B.C  makefile  read_card.h
pGarfield_client/VGEM350_ED1400/: PRNSOL.lis
pGarfield_client/VGEM400_ED1400/: NLIST.lis  PRNSOL.lis
pGarfield_client/VGEM450_ED1400/: ELIST.lis  PRNSOL.lis
